Bug 487534 - TM: "Assertion failure: JSVAL_IS_NULL(v)" with function/regexp used as index.  The other half of bug 484120, poorly reviewed by me -- no soup for me!  r=graydon